Added Lottie animation in InventoryFragment

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,8 +47,8 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     implementation 'androidx.navigation:navigation-fragment-ktx:2.6.0'
     implementation 'androidx.navigation:navigation-ui-ktx:2.6.0'
-    implementation 'com.google.firebase:firebase-storage-ktx:20.1.0'
-    implementation 'com.google.firebase:firebase-database-ktx:20.1.0'
+    implementation 'com.google.firebase:firebase-storage-ktx:20.2.1'
+    implementation 'com.google.firebase:firebase-database-ktx:20.2.2'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
@@ -59,4 +59,6 @@ dependencies {
     implementation 'com.github.bumptech.glide:glide:4.14.2'
 //    GLide Transformation
     implementation 'jp.wasabeef:glide-transformations:4.3.0'
+//    lottie animations
+    implementation "com.airbnb.android:lottie:6.0.1"
 }
